--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -616,6 +616,17 @@ ru:
       confirm_delete: Вы уверены, что хотите выгнать этого милого человека из проекта?
     errors:
       user_or_email: "Пользователь не найден. Введине его логин или электронный адрес."
+    #####
+    column:
+      inviting: "Inviting other users"
+      only_admins_can_invite: "Only admins can invite people to this project."
+      contact_admins:
+        one: "In this project, only {{admins}} can invite new members."
+        other: "In this project, only {{admins}} can invite new members."
+      leaving: "Leaving the project"
+      you_can_leave: "You can leave this project at any moment. If you do, you won't be able to access its data anymore, and you will not receive further notifications. Others will still be able to access the project, and no data will be lost."
+      leave_project: "Leave this project"
+      confirm_delete: Are you sure you want to leave this project?
   comments:
     comment:
       commented_on: "-"
