--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -617,10 +617,11 @@ it:
       submit: Modifica
     fields:
       role: Ruolo
-      observer: Osservatore
-      commenter: Commentatore
-      participant: Partecipante
-      admin: Amministratore
+      #####
+      observer: Observer. Read-only access to the project.
+      commenter: "Commenter. Can comment, but not create new elements."
+      participant: "Participant. Can do everything, but not invite users."
+      admin: Administrador. Can invite users to the project.
     header:
       owner: Proprietario del progetto
       observer: Osservatore
