--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -599,10 +599,10 @@ en:
       submit: Update Person
     fields:
       role: Role
-      observer: Observer
-      commenter: Commenter
-      participant: Participant
-      admin: Admin
+      observer: Observer. Read-only access to the project.
+      commenter: "Commenter. Can comment, but not create new elements."
+      participant: "Participant. Can do everything, but not invite users."
+      admin: Administrador. Can invite users to the project.
     header:
       owner: Project Owner
       observer: Observer
