--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -761,11 +761,11 @@ es:
       notifications: Notificaciones
     task_navigation:
       all_tasks: Todas
-      unarchived_tasks: "Unarchived Tasks"
+      unarchived_tasks: Tareas sin archivar
       my_tasks:
         one: "Mía"
         other: "Mías ({{count}})"
-      everybodys_tasks: "Everybody's tasks"
+      everybodys_tasks: "Todas las tareas"
       show_archived_tasks:
         one: "Mostrar 1 tarea archivada"
         other: "Mostrar {{count}} tareas archivadas"
