--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -656,6 +656,7 @@ ca:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: Segur que vols esborrar aquest comentari?
+      hours_hrs: "{{hours}}H"
     new:
       assigned_to_nobody: Sense assignar
       assigned_to: "Assignat a:"
