--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -657,6 +657,7 @@ de:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: "Sind Sie sicher, dass Sie diesen Kommentar löschen wollen?"
+      hours_hrs: "{{hours}}H"
     new:
       assigned_to_nobody: 'Nicht zugeordnet'
       assigned_to: "Zugeordnet zu:"
