--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -631,6 +631,7 @@ en:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: Are you sure you want to delete this comment?
+      hours_hrs: "{{hours}}H"
     new:
       assigned_to_nobody: 'Unassigned'
       assigned_to: "Assigned to:"
