--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -633,6 +633,7 @@ es:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: Seguro que quieres borrar este comentario?
+      hours_hrs: "{{hours}}H"
     new:
       assigned_to_nobody: Sin asignar
       assigned_to: "Asignado a:"
