--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -637,6 +637,7 @@ fr:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: Etes-vous sûr de vouloir effacer ce commentaire?
+      hours_hrs: "{{hours}}H"
     new:
       assigned_to_nobody: 'Assignée à personne'
       assigned_to: "Assigné à:"
