--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -639,6 +639,7 @@ ru:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: Вы уверены, что хотите удалить этот комментарий?
+      hours_hrs: "{{hours}}H"
     new:
       assigned_to_nobody: 'Не назначен'
       assigned_to: "Назначен:"
