--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -634,6 +634,7 @@ zh:
       commented_on: "-"
       commented_on_a_task_list: "-"
       confirm_delete: 您确信要删除这条评论？
+      hours_hrs: "{{hours}}H"
     new:
       assigned_to_nobody: '未分配'
       assigned_to: "分配给:"
