--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -606,7 +606,7 @@ en:
       observer: Observer. Read-only access to the project.
       commenter: "Commenter. Can comment, but not create new elements."
       participant: "Participant. Can do everything, but not invite users."
-      admin: Administrador. Can invite users to the project.
+      admin: Admin. Can invite users to the project.
     header:
       owner: Project Owner
       observer: Observer
